# FQW

./: .gitignore  README.md  docker-compose.yml  postgres_gas.env  postgres_oil.env  Круглое_АС10.injcell  Спецификации.txt
envs/: liq.env  oil.env  postgres_liq.env  postgres_oil.env  postgres_zak.env  zak.env
geoprod_adapters/: .gitignore  Dockerfile  adapters.sln
geoprod_adapters/GnuPlotAdapter/: CalculatedWell.cs  Program.cs  UpperCaseNamingPolicy.cs  WeatherForecast.cs
geoprod_adapters/GnuPlotAdapter/Controllers/: WeatherForecastController.cs
geoprod_adapters/GnuPlotAdapter/Properties/: launchSettings.json
geoprod_adapters/JsonAdapter/: WeatherForecast.cs
geoprod_adapters/JsonAdapter/Controllers/: WeatherForecastController.cs
geoprod_adapters/JsonAdapter/Properties/: launchSettings.json
geoprod_com/: go.mod  go.sum
geoprod_com/src/: main.go  models.go
geoprod_gas/: Cargo.toml  Dockerfile
geoprod_inpoint/: Dockerfile  pyproject.toml
geoprod_inpoint/geoprod/: main.py  models.py
geoprod_inpoint/src/: main.py  models.py
geoprod_inpoint/tests/: test.json  test_geoprod.py
geoprod_liq/: Dockerfile
geoprod_liq/src/: db_connection.ts  deps.ts  index.ts  models.ts
geoprod_oil/: DbConnetion.fs  Dockerfile  Models.fs  Program.fs  data.csv  data.db  oil.fsproj  oil.sln
geoprod_oil/Properties/: launchSettings.json
geoprod_zak/: Dockerfile  pyproject.toml
geoprod_zak/src/: main.py  models.py
init_liq/: LiqWell.sql
init_oil/: Oil.sql
init_zak/: Zak.sql
