[tool.poetry]
name = "geoprod_inpoint"
version = "0.1.0"
description = ""
authors = ["Fedor Kuznetsov <dmesser@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
loguru = "^0.6.0"
uvicorn = "^0.17.6"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
